--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>AnySpeak</title>
+    <title>Whispree</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
